quick 3d card flip animation

--- a/index.html
+++ b/index.html
@@ -4,10 +4,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/styles.css">
-    <title>Document</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;1,100;1,200;1,300;1,400;1,500&display=swap" rel="stylesheet">
+    <title>flip card</title>
 </head>
 <body>
-   
+    <!-- card -->
+   <div class="card">
+       <div class="card-inner">
+           <div class=" card-face card-face-front">
+               <h2>click me</h2>
+           </div>
+           <div class="card-face card-face-back">
+               <div class="card-content">
+                   <div class="card-header">
+                       <img src="/img/unnamed.jpg" class="pro-pic" alt="">
+                       <h2>zane gilfillan</h2>
+                   </div>
+                   <div class="card-body">
+                       <h3>dredge player here</h3>
+                       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut illo deleniti molestiae repellat iste perspiciatis quos placeat eveniet dolore magnam.</p>
+                   </div>
+               </div>
+           </div>
+       </div>
+   </div>
+
+
+
     <script src="/script.js"></script>
 </body>
 </html>
